# awesome-cli

./: MANIFEST.in  README.md  cli.py  main.py  pyproject.toml  setup.py
awesome_cli/: __init__.py  core.py  main.py
awesome_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
commands/: hello.py  list_files.py
example_project/: README.md  my_cli.py
example_project/my_commands/: __init__.py  calculate.py  greet.py
